add discovery server and some fix